@@ -45,7 +45,6 @@ some required software needs to be installed:
   GNU automake >= 1.11
   GNU libtool >= 2.0
   GNU gettext >= 0.19 (or just autopoint if using --disable-nls)
-  flex
 
 After installing the needed software, and running the following command on
 the git tree:
