@@ -1,2 +1,1 @@
-trigdeferred.c
 libdpkg.pc
