@@ -41,7 +41,7 @@ lib/dpkg/strwide.c
 lib/dpkg/subproc.c
 lib/dpkg/tarfn.c
 lib/dpkg/treewalk.c
-lib/dpkg/trigdeferred.l
+lib/dpkg/trigdeferred.c
 lib/dpkg/triglib.c
 lib/dpkg/trigname.c
 lib/dpkg/utils.c
